# httpancake-webserver

./: CMakeLists.txt  README.md
httpancake/: CMakeLists.txt  httPancake.cpp  webServer.cpp  webServer.hpp
httpancake/sourcesForTest/: hello.html
httpancake/sourcesForTest/home/: index.html
src/logging/: CMakeLists.txt  FixBuffer.hpp  LogStream.cpp  LogStream.hpp  Logger.cpp  Logger.hpp  NonBlockingLog.cpp  NonBlockingLog.hpp
src/network/: Acceptor.cpp  Acceptor.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Socket.cpp  Socket.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  TcpServer.hpp  httpTcpConnection.cpp  httpTcpConnection.hpp  socketUtils.cpp  socketUtils.hpp
src/reactor/: CMakeLists.txt  EventLoop.cpp  EventLoop.hpp  EventLoopThread.cpp  EventLoopThread.hpp  EventLoopThreadPool.cpp  EventLoopThreadPool.hpp  Handler.cpp  Handler.hpp  Poller.cpp  Poller.hpp  Timer.cpp  Timer.hpp  TimerId.hpp  TimerQueue.cpp  TimerQueue.hpp  Timestamp.cpp  Timestamp.hpp
tests/: CMakeLists.txt  LoggerTest.cpp  discard.cpp  echo.cpp  nonBlockingLogTest.cpp  reactorTest1.cpp  simpleWebServer.cpp  threadIdentityTest.cpp
